update seed file and fix nav-bar z-index

--- a/app/assets/stylesheets/components/_nav_bar.scss
+++ b/app/assets/stylesheets/components/_nav_bar.scss
@@ -60,7 +60,7 @@ header {
   width: 80%;
   margin: 0, auto;
   height: 50px;
-  z-index: 100;
+  // z-index: 100;
 }
 
 .search-header {
